; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_patterns.c_str_match.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_patterns.c_str_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.str_match = type { i8*, i32, i64, i64, i32** }
%struct.match_state = type { i8*, i32, i64, i64, i32** }
%struct.str_find = type { i8*, i32, i64, i64, i32** }

@MAXCAPTURES = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @str_match(i8* %0, i8* %1, %struct.str_match* %2, i8** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.str_match*, align 8
  %9 = alloca i8**, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca %struct.match_state, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store %struct.str_match* %2, %struct.str_match** %8, align 8
  store i8** %3, i8*** %9, align 8
  %18 = load i32, i32* @MAXCAPTURES, align 4
  %19 = zext i32 %18 to i64
  %20 = call i8* @llvm.stacksave()
  store i8* %20, i8** %10, align 8
  %21 = alloca %struct.str_find, i64 %19, align 16
  store i64 %19, i64* %11, align 8
  %22 = load i32, i32* @MAXCAPTURES, align 4
  %23 = sext i32 %22 to i64
  store i64 %23, i64* %16, align 8
  %24 = bitcast %struct.match_state* %12 to %struct.str_match*
  %25 = call i32 @memset(%struct.str_match* %24, i32 0, i32 40)
  %26 = bitcast %struct.str_find* %21 to %struct.str_match*
  %27 = mul nuw i64 40, %19
  %28 = trunc i64 %27 to i32
  %29 = call i32 @memset(%struct.str_match* %26, i32 0, i32 %28)
  %30 = load %struct.str_match*, %struct.str_match** %8, align 8
  %31 = call i32 @memset(%struct.str_match* %30, i32 0, i32 40)
  %32 = bitcast %struct.match_state* %12 to %struct.str_match*
  %33 = load i8*, i8** %7, align 8
  %34 = load i8*, i8** %6, align 8
  %35 = bitcast %struct.str_find* %21 to %struct.str_match*
  %36 = load i64, i64* %16, align 8
  %37 = call i32 @str_find_aux(%struct.str_match* %32, i8* %33, i8* %34, %struct.str_match* %35, i64 %36, i32 0)
  store i32 %37, i32* %14, align 4
  %38 = load i32, i32* %14, align 4
  %39 = icmp sle i32 %38, 0
  br i1 %39, label %44, label %40

40:                                               ; preds = %4
  %41 = getelementptr inbounds %struct.match_state, %struct.match_state* %12, i32 0, i32 0
  %42 = load i8*, i8** %41, align 8
  %43 = icmp ne i8* %42, null
  br i1 %43, label %44, label %48

44:                                               ; preds = %40, %4
  %45 = getelementptr inbounds %struct.match_state, %struct.match_state* %12, i32 0, i32 0
  %46 = load i8*, i8** %45, align 8
  %47 = load i8**, i8*** %9, align 8
  store i8* %46, i8** %47, align 8
  store i32 -1, i32* %5, align 4
  store i32 1, i32* %17, align 4
  br label %120

48:                                               ; preds = %40
  %49 = load i32, i32* %14, align 4
  %50 = sext i32 %49 to i64
  %51 = call i32** @calloc(i64 %50, i32 8)
  %52 = load %struct.str_match*, %struct.str_match** %8, align 8
  %53 = getelementptr inbounds %struct.str_match, %struct.str_match* %52, i32 0, i32 4
  store i32** %51, i32*** %53, align 8
  %54 = icmp eq i32** %51, null
  br i1 %54, label %55, label %59

55:                                               ; preds = %48
  %56 = load i32, i32* @errno, align 4
  %57 = call i8* @strerror(i32 %56)
  %58 = load i8**, i8*** %9, align 8
  store i8* %57, i8** %58, align 8
  store i32 -1, i32* %5, align 4
  store i32 1, i32* %17, align 4
  br label %120

59:                                               ; preds = %48
  %60 = load i32, i32* %14, align 4
  %61 = load %struct.str_match*, %struct.str_match** %8, align 8
  %62 = getelementptr inbounds %struct.str_match, %struct.str_match* %61, i32 0, i32 1
  store i32 %60, i32* %62, align 8
  store i32 0, i32* %13, align 4
  br label %63

63:                                               ; preds = %115, %59
  %64 = load i32, i32* %13, align 4
  %65 = load i32, i32* %14, align 4
  %66 = icmp slt i32 %64, %65
  br i1 %66, label %67, label %118

67:                                               ; preds = %63
  %68 = load i32, i32* %13, align 4
  %69 = sext i32 %68 to i64
  %70 = getelementptr inbounds %struct.str_find, %struct.str_find* %21, i64 %69
  %71 = getelementptr inbounds %struct.str_find, %struct.str_find* %70, i32 0, i32 2
  %72 = load i64, i64* %71, align 8
  %73 = load i32, i32* %13, align 4
  %74 = sext i32 %73 to i64
  %75 = getelementptr inbounds %struct.str_find, %struct.str_find* %21, i64 %74
  %76 = getelementptr inbounds %struct.str_find, %struct.str_find* %75, i32 0, i32 3
  %77 = load i64, i64* %76, align 8
  %78 = icmp sgt i64 %72, %77
  br i1 %78, label %79, label %80

79:                                               ; preds = %67
  br label %115

80:                                               ; preds = %67
  %81 = load i32, i32* %13, align 4
  %82 = sext i32 %81 to i64
  %83 = getelementptr inbounds %struct.str_find, %struct.str_find* %21, i64 %82
  %84 = getelementptr inbounds %struct.str_find, %struct.str_find* %83, i32 0, i32 3
  %85 = load i64, i64* %84, align 8
  %86 = load i32, i32* %13, align 4
  %87 = sext i32 %86 to i64
  %88 = getelementptr inbounds %struct.str_find, %struct.str_find* %21, i64 %87
  %89 = getelementptr inbounds %struct.str_find, %struct.str_find* %88, i32 0, i32 2
  %90 = load i64, i64* %89, align 8
  %91 = sub nsw i64 %85, %90
  store i64 %91, i64* %15, align 8
  %92 = load i8*, i8** %6, align 8
  %93 = load i32, i32* %13, align 4
  %94 = sext i32 %93 to i64
  %95 = getelementptr inbounds %struct.str_find, %struct.str_find* %21, i64 %94
  %96 = getelementptr inbounds %struct.str_find, %struct.str_find* %95, i32 0, i32 2
  %97 = load i64, i64* %96, align 8
  %98 = getelementptr inbounds i8, i8* %92, i64 %97
  %99 = load i64, i64* %15, align 8
  %100 = call i32* @strndup(i8* %98, i64 %99)
  %101 = load %struct.str_match*, %struct.str_match** %8, align 8
  %102 = getelementptr inbounds %struct.str_match, %struct.str_match* %101, i32 0, i32 4
  %103 = load i32**, i32*** %102, align 8
  %104 = load i32, i32* %13, align 4
  %105 = sext i32 %104 to i64
  %106 = getelementptr inbounds i32*, i32** %103, i64 %105
  store i32* %100, i32** %106, align 8
  %107 = icmp eq i32* %100, null
  br i1 %107, label %108, label %114

108:                                              ; preds = %80
  %109 = load i32, i32* @errno, align 4
  %110 = call i8* @strerror(i32 %109)
  %111 = load i8**, i8*** %9, align 8
  store i8* %110, i8** %111, align 8
  %112 = load %struct.str_match*, %struct.str_match** %8, align 8
  %113 = call i32 @str_match_free(%struct.str_match* %112)
  store i32 -1, i32* %5, align 4
  store i32 1, i32* %17, align 4
  br label %120

114:                                              ; preds = %80
  br label %115

115:                                              ; preds = %114, %79
  %116 = load i32, i32* %13, align 4
  %117 = add nsw i32 %116, 1
  store i32 %117, i32* %13, align 4
  br label %63

118:                                              ; preds = %63
  %119 = load i8**, i8*** %9, align 8
  store i8* null, i8** %119, align 8
  store i32 0, i32* %5, align 4
  store i32 1, i32* %17, align 4
  br label %120

120:                                              ; preds = %118, %108, %55, %44
  %121 = load i8*, i8** %10, align 8
  call void @llvm.stackrestore(i8* %121)
  %122 = load i32, i32* %5, align 4
  ret i32 %122
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memset(%struct.str_match*, i32, i32) #2

declare dso_local i32 @str_find_aux(%struct.str_match*, i8*, i8*, %struct.str_match*, i64, i32) #2

declare dso_local i32** @calloc(i64, i32) #2

declare dso_local i8* @strerror(i32) #2

declare dso_local i32* @strndup(i8*, i64) #2

declare dso_local i32 @str_match_free(%struct.str_match*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
